data/derived/comb/progs/unify/prog2456.ml.out
Characters 139-143:
  List.fold_left f base l;;
                   ^^^^
Error: This expression has type string -> string
       but an expression was expected of type string
